docs: document reproducible WSL Connect server